[package]
name = "tide-demo"
version = "0.1.0"
authors = ["Wison Ye <wisonye@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = { version = "~1.9", features = ["attributes"] }
tide = "~0.15"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "^0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jwt = "0.12.0"
hmac="^0.9"
sha2="^0.9"
